Update current user, workspace user, and dashboard integration