@@ -13,16 +13,12 @@ import com.flowforge.task.repository.TaskRepository;
 import org.springframework.stereotype.Service;
 
 import java.time.Instant;
-import java.time.LocalDate;
 import java.util.List;
-import java.util.Locale;
-import java.util.Set;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 public class TaskService {
-
-    private static final Set<String> ALLOWED_STATUSES = Set.of("TODO", "IN_PROGRESS", "DONE");
 
     private final TaskRepository taskRepository;
     private final ProjectRepository projectRepository;
@@ -32,19 +28,24 @@ public class TaskService {
         this.projectRepository = projectRepository;
     }
 
-    public TaskResponse createTask(CreateTaskRequest request, CustomUserPrincipal principal) {
-        Project project = projectRepository.findByIdAndTenantId(request.getProjectId(), principal.getTenantId())
-                .orElseThrow(() -> new BadRequestException("Project not found in this workspace"));
+    public TaskResponse createTask(CreateTaskRequest request, CustomUserPrincipal currentUser) {
+        Project project = projectRepository.findByIdAndTenantId(
+                        request.getProjectId(),
+                        currentUser.getTenantId()
+                )
+                .orElseThrow(() -> new BadRequestException("Project not found"));
 
         Task task = Task.builder()
-                .tenantId(principal.getTenantId())
+                .tenantId(currentUser.getTenantId())
                 .projectId(project.getId())
                 .title(request.getTitle().trim())
-                .description(request.getDescription() != null ? request.getDescription().trim() : null)
+                .description(
+                        request.getDescription() != null ? request.getDescription().trim() : null
+                )
                 .status("TODO")
-                .priority(request.getPriority().trim().toUpperCase(Locale.ROOT))
+                .priority(request.getPriority().trim().toUpperCase())
                 .dueDate(request.getDueDate())
-                .createdBy(principal.getUserId())
+                .createdBy(currentUser.getUserId())
                 .createdAt(Instant.now())
                 .assigneeId(request.getAssigneeId())
                 .build();
@@ -53,63 +54,76 @@ public class TaskService {
         return toResponse(task);
     }
 
-    public List<TaskResponse> getTasksByProject(UUID projectId, CustomUserPrincipal principal) {
-        projectRepository.findByIdAndTenantId(projectId, principal.getTenantId())
-                .orElseThrow(() -> new BadRequestException("Project not found in this workspace"));
+    public List<TaskResponse> getTasksByProject(UUID projectId, CustomUserPrincipal currentUser) {
+        projectRepository.findByIdAndTenantId(projectId, currentUser.getTenantId())
+                .orElseThrow(() -> new BadRequestException("Project not found"));
 
         return taskRepository.findByTenantIdAndProjectIdOrderByCreatedAtDesc(
-                        principal.getTenantId(),
+                        currentUser.getTenantId(),
                         projectId
                 )
                 .stream()
                 .map(this::toResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    public TaskResponse getTaskById(UUID taskId, CustomUserPrincipal principal) {
-        Task task = taskRepository.findByIdAndTenantId(taskId, principal.getTenantId())
-                .orElseThrow(() -> new BadRequestException("Task not found in this workspace"));
+    public List<TaskResponse> getMyTasks(CustomUserPrincipal currentUser) {
+        return taskRepository.findByTenantIdAndAssigneeIdOrderByCreatedAtDesc(
+                        currentUser.getTenantId(),
+                        currentUser.getUserId()
+                )
+                .stream()
+                .map(this::toResponse)
+                .collect(Collectors.toList());
+    }
+
+    public TaskResponse getTaskById(UUID taskId, CustomUserPrincipal currentUser) {
+        Task task = taskRepository.findByIdAndTenantId(taskId, currentUser.getTenantId())
+                .orElseThrow(() -> new BadRequestException("Task not found"));
 
         return toResponse(task);
     }
 
-    public TaskResponse updateTask(UUID taskId, UpdateTaskRequest request, CustomUserPrincipal principal) {
-        Task task = taskRepository.findByIdAndTenantId(taskId, principal.getTenantId())
-                .orElseThrow(() -> new BadRequestException("Task not found in this workspace"));
+    public TaskResponse updateTask(UUID taskId, UpdateTaskRequest request, CustomUserPrincipal currentUser) {
+        Task task = taskRepository.findByIdAndTenantId(taskId, currentUser.getTenantId())
+                .orElseThrow(() -> new BadRequestException("Task not found"));
 
-        task.setTitle(request.getTitle().trim());
-        task.setDescription(request.getDescription() != null ? request.getDescription().trim() : null);
-        task.setPriority(request.getPriority().trim().toUpperCase(Locale.ROOT));
-
-        if (request.getDueDate() != null && !request.getDueDate().isBlank()) {
-            task.setDueDate(LocalDate.parse(request.getDueDate()));
-        } else {
-            task.setDueDate(null);
+        if (request.getTitle() != null && !request.getTitle().isBlank()) {
+            task.setTitle(request.getTitle().trim());
         }
+
+        task.setDescription(
+                request.getDescription() != null ? request.getDescription().trim() : null
+        );
+
+        if (request.getPriority() != null && !request.getPriority().isBlank()) {
+            task.setPriority(request.getPriority().trim().toUpperCase());
+        }
+
+        task.setDueDate(request.getDueDate());
+        task.setAssigneeId(request.getAssigneeId());
 
         task = taskRepository.save(task);
         return toResponse(task);
     }
 
-    public TaskResponse updateTaskStatus(UUID taskId, UpdateTaskStatusRequest request, CustomUserPrincipal principal) {
-        Task task = taskRepository.findByIdAndTenantId(taskId, principal.getTenantId())
-                .orElseThrow(() -> new BadRequestException("Task not found in this workspace"));
+    public TaskResponse updateTaskStatus(UUID taskId, UpdateTaskStatusRequest request, CustomUserPrincipal currentUser) {
+        Task task = taskRepository.findByIdAndTenantId(taskId, currentUser.getTenantId())
+                .orElseThrow(() -> new BadRequestException("Task not found"));
 
-        String normalizedStatus = request.getStatus().trim().toUpperCase(Locale.ROOT);
-
-        if (!ALLOWED_STATUSES.contains(normalizedStatus)) {
-            throw new BadRequestException("Invalid task status. Allowed values: TODO, IN_PROGRESS, DONE");
+        if (request.getStatus() == null || request.getStatus().isBlank()) {
+            throw new BadRequestException("Task status is required");
         }
 
-        task.setStatus(normalizedStatus);
+        task.setStatus(request.getStatus().trim().toUpperCase());
         task = taskRepository.save(task);
 
         return toResponse(task);
     }
 
-    public TaskResponse assignTask(UUID taskId, UUID assigneeId, CustomUserPrincipal principal) {
-        Task task = taskRepository.findByIdAndTenantId(taskId, principal.getTenantId())
-                .orElseThrow(() -> new BadRequestException("Task not found in this workspace"));
+    public TaskResponse assignTask(UUID taskId, UUID assigneeId, CustomUserPrincipal currentUser) {
+        Task task = taskRepository.findByIdAndTenantId(taskId, currentUser.getTenantId())
+                .orElseThrow(() -> new BadRequestException("Task not found"));
 
         task.setAssigneeId(assigneeId);
         task = taskRepository.save(task);
@@ -117,36 +131,26 @@ public class TaskService {
         return toResponse(task);
     }
 
-    public List<TaskResponse> getMyTasks(CustomUserPrincipal principal) {
-        return taskRepository.findByTenantIdAndAssigneeIdOrderByCreatedAtDesc(
-                        principal.getTenantId(),
-                        principal.getUserId()
-                )
-                .stream()
-                .map(this::toResponse)
-                .toList();
-    }
-
-    public void deleteTask(UUID taskId, CustomUserPrincipal principal) {
-        Task task = taskRepository.findByIdAndTenantId(taskId, principal.getTenantId())
-                .orElseThrow(() -> new BadRequestException("Task not found in this workspace"));
+    public void deleteTask(UUID taskId, CustomUserPrincipal currentUser) {
+        Task task = taskRepository.findByIdAndTenantId(taskId, currentUser.getTenantId())
+                .orElseThrow(() -> new BadRequestException("Task not found"));
 
         taskRepository.delete(task);
     }
 
     private TaskResponse toResponse(Task task) {
-        return new TaskResponse(
-                task.getId(),
-                task.getTenantId(),
-                task.getProjectId(),
-                task.getTitle(),
-                task.getDescription(),
-                task.getStatus(),
-                task.getPriority(),
-                task.getDueDate(),
-                task.getCreatedBy(),
-                task.getCreatedAt(),
-                task.getAssigneeId()
-        );
+        return TaskResponse.builder()
+                .id(task.getId())
+                .tenantId(task.getTenantId())
+                .projectId(task.getProjectId())
+                .title(task.getTitle())
+                .description(task.getDescription())
+                .status(task.getStatus())
+                .priority(task.getPriority())
+                .dueDate(task.getDueDate())
+                .createdBy(task.getCreatedBy())
+                .createdAt(task.getCreatedAt())
+                .assigneeId(task.getAssigneeId())
+                .build();
     }
 }
